...

            </LinearLayout>

        </LinearLayout>

        <include
            android:id="@+id/secondaryActionButton"
            layout="@layout/secondary_action" />

    </LinearLayout>

</FrameLayout>

