...

    <!-- Activity and fragment titles -->
    <string name="provider_authority" translatable="false">ac.mdiq.podcini.provider</string>
    <string name="feed_update_receiver_name">Update subscriptions</string>
    <string name="feeds_label">Podcasts</string>
    <string name="statistics_label">Statistics</string>
    <string name="add_feed_label">Add podcast</string>
    <string name="episodes_label">Episodes</string>
    <string name="home_label">Home</string>
    <string name="queue_label">Queue</string>
    <string name="inbox_label">Inbox</string>
    <string name="favorite_episodes_label">Favorites</string>
    <string name="settings_label">Settings</string>
...
    <string name="clear_history_label">Clear history</string>
    <string name="clear_playback_history_msg">This will clear the entire playback history. Are you sure you want to proceed?</string>
    <string name="remove_history_label">Remove from history</string>
    <string name="removed_history_label">Removed from history</string>

    <!-- Other -->
    <string name="confirm_label">Confirm</string>
    <string name="cancel_label">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="reset">Reset</string>
    <string name="global_default">Global default</string>
    <string name="url_label">URL</string>
    <string name="support_funding_label">Support</string>
...
    <string name="shownotes_label">Shownotes</string>
    <string name="shownotes_contentdescription">swipe up to read shownotes</string>
    <string name="episodes_suffix">\u0020episodes</string>
    <string name="close_label">Close</string>
    <string name="retry_label">Retry</string>
    <string name="auto_download_label">Include in auto downloads</string>
    <string name="auto_delete_label">Auto delete episode</string>
    <string name="feed_volume_adapdation">Volume adaptation</string>
    <string name="feed_volume_adaptation_summary">Turn volume for episodes of this podcast up or down: %1$s</string>
    <string name="feed_volume_reduction_off">No adaption</string>
    <string name="feed_volume_reduction_light">Light reduction</string>
    <string name="feed_volume_reduction_heavy">Heavy reduction</string>
    <string name="feed_volume_boost_light">Light boost</string>
    <string name="feed_volume_boost_medium">Medium boost</string>
...
    <string name="pref_theme_title_automatic">Automatic</string>
    <string name="pref_theme_title_light">Light</string>
    <string name="pref_theme_title_dark">Dark</string>
    <string name="pref_episode_cache_unlimited">Unlimited</string>
    <string name="pref_playback_speed_sum">Customize the speeds available for variable speed playback</string>
    <string name="pref_feed_playback_speed_sum">The speed to use when starting audio playback for episodes in this podcast</string>
    <string name="pref_feed_skip">Auto skip</string>
    <string name="pref_feed_skip_sum">Skip introductions and ending credits.</string>
    <string name="pref_feed_skip_ending">Skip last</string>
    <string name="pref_feed_skip_intro">Skip first</string>
    <string name="pref_feed_skip_ending_toast">Skipped last %d seconds</string>
    <string name="pref_feed_skip_intro_toast">Skipped first %d seconds</string>
    <string name="pref_playback_time_respects_speed_title">Adjust media info to playback speed</string>
...
    <string name="choose_data_directory_message">Please choose the base of your data folder. Podcini will create the appropriate sub-directories.</string>
    <string name="choose_data_directory_available_space">%1$s of %2$s free</string>
    <string name="pref_pausePlaybackForFocusLoss_sum">Pause playback instead of lowering volume when another app wants to play sounds</string>
    <string name="pref_pausePlaybackForFocusLoss_title">Pause for interruptions</string>

    <!-- Online feed view -->
    <string name="subscribe_label">Subscribe</string>
    <string name="subscribing_label">Subscribing&#8230;</string>
    <string name="preview_episode">Preview</string>
    <string name="stop_preview">Stop preview</string>

    <!-- Content descriptions for image buttons -->
    <string name="toolbar_back_button_content_description">Back</string>
...
    <string name="prev_chapter">Previous chapter</string>
    <string name="next_chapter">Next chapter</string>
    <string name="shuffle_suggestions">Shuffle suggestions</string>
    <string name="add_preset">Add preset</string>

    <!-- Feed settings/information screen -->
    <string name="authentication_label">Authentication</string>
    <string name="authentication_descr">Change your username and password for this podcast and its episodes.</string>
    <string name="feed_tags_label">Tags</string>
    <string name="feed_tags_summary">Change the tags of this podcast to help organize your subscriptions</string>
    <string name="feed_folders_include_root">Show this podcast in main list</string>
    <string name="multi_feed_common_tags_info">{fa-info-circle} Only common tags from all selected subscriptions are shown. Other tags stay unaffected.</string>
    <string name="auto_download_settings_label">Auto download settings</string>
    <string name="episode_filters_label">Episode filter</string>
    <string name="episode_filters_description">List of terms used to decide if an episode should be included or excluded when auto downloading</string>
    <string name="add_term">Add term</string>
    <string name="exclude_terms">Exclude episodes containing any of the terms below</string>
    <string name="include_terms">Include only episodes containing any of the terms below</string>
    <string name="exclude_episodes_shorter_than">Exclude episodes shorter than</string>
    <string name="keep_updated">Keep updated</string>
    <string name="keep_updated_summary">Include this podcast when (auto-)refreshing all podcasts</string>
    <string name="auto_download_disabled_globally">Auto download is disabled in the main Podcini settings</string>
    <string name="statistics_time_played">Time played:</string>
    <string name="statistics_total_duration">Total duration (estimate):</string>
    <string name="statistics_episodes_on_device">Episodes on the device:</string>
    <string name="statistics_space_used">Space used:</string>
...
    <string name="share_dialog_media_address">Media address</string>
    <string name="share_dialog_media_file_label">Media file</string>
    <string name="share_starting_position_label">Starting from</string>

    <!-- Audio controls -->
    <string name="audio_controls">Audio controls</string>
    <string name="playback_speed">Playback speed</string>
    <string name="player_switch_to_audio_only">Switch to audio only</string>

    <!-- proxy settings -->
    <string name="proxy_type_label">Type</string>
    <string name="host_label">Host</string>
    <string name="port_label">Port</string>
...
