...

            <View
                android:layout_width="15dp"
                android:layout_height="match_parent"/>

            <ImageButton
                android:id="@+id/butShowSettings"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/show_feed_settings_label"
                android:scaleType="fitXY"
                android:padding="3dp"
...
