...
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:accessibilityHeading="true"
                android:textColor="?android:attr/textColorPrimary" />

            <TextView
                android:id="@+id/addViaUrlButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_podcast_by_url"
                app:drawableStartCompat="@drawable/ic_feed"
                app:drawableLeftCompat="@drawable/ic_feed"
                style="@style/AddPodcastTextView" />
...
